             Suggested by Rickard Oberg.
           - Added new Digest#ALGORITHM_HTTP_DIGEST constant for A1 
             field as specified in RFC 2617.
           - Renamed HttpDigestAuthenticator into a more generic 
             DigestAuthenticator.
           - Made the HTTP DIGEST work again on the server-side, via 
             DigestAuthenticator. Issue reported by Carsten Lohmann.
        - Renamed RestletSolrQueryRequest to SolrRestletQueryRequest.
        - Renamed RestletSolrParams to SolrRestletParams.
        - Renamed Application#getRole() into findRole().
        - Added "next" property to Server and deprecated "target" for
          more naming consistency with filters.
        - Added conveniency constructors to Server.
        - ResourceException is now a RuntimeException to facilitate its
          usage with dynamic proxies created by ClientResource#create()
          static methods and wrap() methods.
        - UniformResource#doCatch() now logs throwable with different
          levels depending on the type of errors.
        - Added additional methods like post(Object, MediaType) that
          return a Representation to ClientResource.
      - Bugs fixed
        - Fixed bug when the deprecated method "createRoot" is 
          implemented instead of the "createInboundRoot".
          Reported by Fabian Mandelbaum.
        - ServerResource#getVariants() now returns an empty list
          instead of null when no annotation is present.
          Reported by Tal Liron.
        - Annotated methods returning a String, a StringRepresentation
          or a Reader were only exposing a "text/plain" variant even
          though most other media types are acceptable like JSON, XML.
        - Fixed bug in ServerResource when content negotiation was
          disabled, all non standard methods where invoking the OPTIONS
          method. 
        - Fixed ClientResource to throw ResourceException upon error