@@ -36,7 +36,6 @@ import java.util.SortedMap;
 import java.util.TreeMap;
 
 import org.restlet.Request;
-import org.restlet.data.ChallengeRequest;
 import org.restlet.data.ChallengeResponse;
 import org.restlet.data.ChallengeScheme;
 import org.restlet.data.Form;
@@ -126,11 +125,6 @@ public class HttpAwsS3Helper extends AuthenticatorHelper {
      */
     public HttpAwsS3Helper() {
         super(ChallengeScheme.HTTP_AWS_S3, true, false);
-    }
-
-    @Override
-    public String format(ChallengeRequest request) {
-        return null;
     }
 
     @Override
